syntax = "proto3";
package ch.admin.bag.dp3t.checkin.models;

message ProblematicEventWrapper {
  int32 version = 1;
  repeated ProblematicEvent events = 2;
}

message ProblematicEvent {
  int32 version = 1;
  bytes identity = 2;
  bytes secretKeyForIdentity = 3;
  int64 day = 4;
  bytes encryptedAssociatedData = 5;
  bytes cipherTextNonce = 6;
}

message AssociatedData {
  int32 version = 1;
  string message = 2;
  int64 startTime = 3;
  int64 endTime = 4;
  bytes countryData = 5;
}

enum EventCriticality {
  LOW = 0;
  HIGH = 1;
}

message SwissCovidAssociatedData {
  int32 version = 1;
  EventCriticality criticality = 2;
}


message SwissCovidLocationData {
  uint32 version = 1;
  VenueType type = 2;
  string room = 3;
  int64 checkoutWarningDelayMs = 4;
  int64 automaticCheckoutDelaylMs = 5;
  repeated int64 reminderDelayOptionsMs = 6;
}

enum VenueType {
  OTHER = 0;
  MEETING_ROOM = 1;
  CAFETERIA = 2;
  PRIVATE_EVENT = 3;
  CANTEEN = 4;
  LIBRARY = 5;
  LECTURE_ROOM = 6;
  SHOP = 7;
  GYM = 8;
  KITCHEN_AREA = 9;
  OFFICE_SPACE = 10;
}
